# self-omemo

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml  olm.h  self_olm_omemo.h  self_omemo.h
.github/workflows/: build-linux.yml  build-mac.yml  build-windows.yml  build.yml  ci.yml  publish.yml  release.yml
src/: error.rs  group_message.rs  lib.rs  message.rs  olm.rs  omemo.rs  sodium.rs
