[package]
name = "self-olm-omemo"
version = "0.1.0"
authors = ["Tom Bevan <tom.bevan@r3labs.io>"]
edition = "2018"
build = "build.rs"

[lib]
name = "self_olm_omemo"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
base64 = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2.5"

[build-dependencies]
bindgen = "0.53.1"
