[package]
name = "self-omemo"
version = "0.1.0"
license = "MIT"
authors = ["Tom Bevan <tom@selfid.net>"]
edition = "2018"
build = "build.rs"

[lib]
name = "self_omemo"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
base64 = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
bindgen = "0.53.1"
cbindgen = "0.14.1"
