[package]
name = "self_omemo"
version = "0.1.0"
license = "MIT"
authors = ["Tom Bevan <tom@selfid.net>"]
edition = "2018"
build = "build.rs"

[lib]
name = "self_omemo"
crate-type = ["lib", "staticlib"]

[dependencies]
libc = "0.2"
base64 = "0.12.0"
olm_sys = { git = "https://github.com/joinself/olm-sys" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodium_sys = { git = "https://github.com/joinself/sodium-sys" }

[build-dependencies]
cbindgen = "0.20.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
